
[project]
name = "ttslo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=6.3.0",
    "requests>=2.31.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "websocket-client>=1.9.0",
    "flask>=3.1.2",
    "numpy>=2.3.4",
    "matplotlib>=3.10.7",
    "scipy>=1.16.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
